[package]
name = "zenon"
version = "0.1.0"
description = "Zenon Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zenon"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata"] }
spl-token = "=4.0.1"
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
